# riplib

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: arm-none-eabi.cmake  riplibConfig.cmake.in
consumer-handoff/a2gspu/: README.md  audit-trail.md  dll-reference.md  integration-notes.md
design/: decisions.md  knowledge.md
design/adr/: 0000-template.md  0001-rip-state-opaque-by-policy.md  0002-spec-code-drift-reconciliation.md  0003-icon-dir-path-sanitization.md  0004-multi-session-state-family-completion.md  0005-full-opacification-reparked.md  0006-next-iteration-steady-state.md
docs/: riplib-snapshot-plan.md
docs/historical/: README.md  ripscrip-v3-RE-notes.md
docs/spec/: 01-wire-format.md  02-level0-drawing.md  03-level1-interactive.md  04-extended-commands.md  05-level2-ports.md  06-v31-extensions.md  06a-v32-extensions.md  07-variables.md  08-font-specification.md  09-icon-pipeline.md  10-appendices.md  11-dll-deviations.md
examples/: CMakeLists.txt  demo.c  platform_stubs.c  rip2ppm.c
fonts/: font_bgi_bold.h  font_bgi_euro.h  font_bgi_goth.h  font_bgi_lcom.h  font_bgi_litt.h  font_bgi_sans.h  font_bgi_scri.h  font_bgi_simp.h  font_bgi_trip.h  font_bgi_tscr.h  font_cp437_8x16.h  font_cp437_8x8.h
icons/: rip_icns_data.c  rip_icns_data.h  rip_icons_data.c  rip_icons_data.h
include/: bgi_font.h  drawing.h  rip_icn.h  rip_icons.h  riplib_platform.h  riplib_version.h  ripscrip.h  ripscrip2.h
scripts/: check-a2gspu-parity.sh  repo-status.sh  sync-to-a2gspu.sh
src/: bgi_font.c  drawing.c  rip_clipboard.c  rip_clipboard.h  rip_icn.c  rip_icons.c  rip_internal.h  rip_meganum.h  rip_preproc.c  rip_preproc.h  rip_variables.c  rip_variables.h  riplib_version.c  ripscrip.c  ripscrip2.c
tests/: CMakeLists.txt  fuzz_parser.c  test_compat.c  test_drawing.c  test_ripscrip.c
tests/fixtures/compat/: README.md  erase_and_reset.expect  erase_and_reset.rip  fill_and_shapes.expect  fill_and_shapes.rip  legacy_draw_scene.expect  legacy_draw_scene.rip  missing_file_query.expect  missing_file_query.rip  palette_pixels.expect  palette_pixels.rip  v32_qol_demo.expect  v32_qol_demo.rip
